--- a/locale/da_DK/locale.po
+++ b/locale/da_DK/locale.po
@@ -1,16 +1,16 @@
-# Alexandra Fogtmann-Schulz <alfo@kb.dk>, 2023.
+# Alexandra Fogtmann-Schulz <alfo@kb.dk>, 2023, 2024.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2023-02-04 05:00+0000\n"
+"PO-Revision-Date: 2024-06-22 06:39+0000\n"
 "Last-Translator: Alexandra Fogtmann-Schulz <alfo@kb.dk>\n"
-"Language-Team: Danish <http://translate.pkp.sfu.ca/projects/plugins/pln/"
-"da_DK/>\n"
-"Language: da_DK\n"
+"Language-Team: Danish <http://translate.pkp.sfu.ca/projects/plugins/pln/da/>"
+"\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.13.1\n"
+"X-Generator: Weblate 4.18.2\n"
 
 msgid "plugins.generic.pln.status.description.title"
 msgstr "Statusbeskrivelse"
@@ -111,7 +111,7 @@ msgid "plugins.generic.pln.depositor.newcontent"
 msgstr "Behandler nyt indhold."
 
 msgid "plugins.generic.pln.depositor.updatedcontent"
-msgstr "Behander opdateret indhold."
+msgstr "Behandler opdateret indhold."
 
 msgid "plugins.generic.pln.depositor.statusupdates"
 msgstr "Behandler opdateringer af deponeringsstatus."
@@ -125,37 +125,38 @@ msgid "plugins.generic.pln.error.handler.uuid.notfound"
 msgstr "Der er ingen deponering knyttet til den ønskede UUID."
 
 msgid "plugins.generic.pln.error.handler.uuid.invalid"
-msgstr "Denønskede UUID er ikke gyldig eller er ikke formateret korrekt."
+msgstr "Den ønskede UUID er ikke gyldig eller er ikke formateret korrekt."
 
 msgid "plugins.generic.pln.error.depositor.export.issue.error"
 msgstr ""
-"Der opstod en fejl under eksport af et nummer. Serverens fejllog kan "
+"Der opstod en fejl under eksporteringen af et nummer. Serverens fejllog kan "
 "muligvis give flere oplysninger."
 
 msgid "plugins.generic.pln.error.depositor.export.articles.error"
 msgstr ""
-"Der opstod en fejl under eksport af artikler. Serverens fejllog kan muligvis "
-"give flere oplysninger."
+"Der opstod en fejl under eksporteringen af artikler. Serverens fejllog kan "
+"muligvis give flere oplysninger."
 
 msgid "plugins.generic.pln.error.depositor.missingpackage"
 msgstr "Kan ikke finde pakkefil {$file}."
 
 msgid "plugins.generic.pln.error.http.swordstatement"
-msgstr "\n"
+msgstr ""
+"PN-serveren returnerede HTTP-fejl {$error} ved kontrol af deponeringsstatus."
+"\n"
 "{$message}"
-"PN-server returnerede HTTP-fejl {$error} ved kontrol af deponeringsstatus."
 
 msgid "plugins.generic.pln.error.http.deposit"
-msgstr "\n"
+msgstr ""
+"PN-serveren returnerede HTTP-fejl {$error}, under forsøget på at indsende "
+"deponeringen.\n"
 "{$message}"
-"PN-server returnerede HTTP-fejl {$error}, under forsøget på at indsende "
-"deponeringen."
 
 msgid "plugins.generic.pln.error.http.servicedocument"
-msgstr "\n"
+msgstr ""
+"PN-serveren returnerede HTTP-fejl {$error}, under forsøget på at hente "
+"servicedokumentet.\n"
 "{$message}"
-"PN-server returnerede HTTP-fejl {$error}, under forsøget på at hente "
-"servicedokumentet."
 
 msgid "plugins.generic.pln.error.network.swordstatement"
 msgstr ""
@@ -361,8 +362,63 @@ msgstr ""
 
 msgid "plugins.generic.pln.description"
 msgstr ""
-"PKP PN-pluginen deponerer dit publicerede indhold hos PKP Preservation "
+"PKP PN-plugin'et deponerer dit publicerede indhold hos PKP Preservation "
 "Network."
 
 msgid "plugins.generic.pln"
 msgstr "PKP PN-plugin"
+
+msgid "plugins.generic.pln.status.error.reserialize-error"
+msgstr ""
+"Ompakning af deponeringen mislykkedes, handlingen vil blive forsøgt gentaget"
+
+msgid "plugins.generic.pln.status.error.virus-error"
+msgstr ""
+"Deponeringen kunne ikke passere antivirus tjekket; du bør inspicere filerne "
+"deri og prøve at sende dem igen"
+
+msgid "plugins.generic.pln.status.error.xml-error"
+msgstr ""
+"Deponeringen kunne ikke passere indholdsvalideringen; du kan prøve at sende "
+"deponeringen igen"
+
+msgid "plugins.generic.pln.status.error.bag-error"
+msgstr ""
+"Deponeringen kunne ikke passere \"the bag validation\"; du kan prøve at "
+"sende deponeringen igen"
+
+msgid "plugins.generic.pln.status.error.status-error"
+msgstr ""
+"Deponeringen vil blive bevaret, men det var ikke muligt at tjekke dens "
+"status, og denne handling vil blive forsøgt gentaget"
+
+msgid "plugins.generic.pln.status.error.hold"
+msgstr ""
+"Deponeringen er blevet tilbageholdt, da versionen af dit system er over det "
+"forventede"
+
+msgid "plugins.generic.pln.status.error.harvest-error"
+msgstr ""
+"Kunne ikke downloade deponeringen fra dit system. Handlingen vil blive "
+"forsøgt gentaget, men i mellemtiden bedes du tjekke om dit system er bag en "
+"firewall"
+
+msgid "plugins.generic.pln.status.error.deposit-error"
+msgstr ""
+"Deponeringen mislykkedes; vil du sikre dig, at den ikke overskred den "
+"maksimale størrelse, der understøttes af Preservation Network"
+
+msgid "plugins.generic.pln.status.error.payload-error"
+msgstr ""
+"Deponeringen kunne ikke passere payload-valideringen; du kan prøve at sende "
+"deponeringen igen"
+
+msgid "plugins.generic.pln.onPluginEnabledNotification"
+msgstr ""
+"Gå til PKP PN plugin-indstillingerne for at se og acceptere servicevilkårene."
+
+msgid "plugins.generic.pln.depositor.pruningDeposits.error"
+msgstr "Følgende deponering(er) blev ikke fjernet: {$depositIds}."
+
+msgid "plugins.generic.pln.notifications.pruningOrphanedDeposits"
+msgstr "Fjerner efterladte deponeringer."
