--- a/locale/es_ES/locale.po
+++ b/locale/es_ES/locale.po
@@ -1,16 +1,18 @@
-# Jordi LC <jordi.lacruz@uab.cat>, 2021.
+# Jordi LC <jordi.lacruz@uab.cat>, 2021, 2024.
+# Marc Bria <marc.bria@gmail.com>, 2023.
+# Darío Hereñú <magallania@gmail.com>, 2024.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2021-08-07 02:47+0000\n"
-"Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
-"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/plugins/pln/"
-"es_ES/>\n"
-"Language: es_ES\n"
+"PO-Revision-Date: 2024-11-20 04:40+0000\n"
+"Last-Translator: Darío Hereñú <magallania@gmail.com>\n"
+"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/plugins/pln/es/>"
+"\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.9.1\n"
+"X-Generator: Weblate 4.18.2\n"
 
 msgid "plugins.generic.pln.status.description.title"
 msgstr "Descripción del estado"
@@ -130,34 +132,34 @@ msgstr "El UUID solicitado no es válido o no tiene un formato correcto."
 
 msgid "plugins.generic.pln.error.depositor.export.issue.error"
 msgstr ""
-"Se ha producido un error mientras se exportaba un artículo. El registro de "
+"Se ha producido un error durante la exportación del número. El registro de "
 "errores del servidor podría darle más información."
 
 msgid "plugins.generic.pln.error.depositor.export.articles.error"
 msgstr ""
-"Se ha producido un error mientras se exportaban los artículos. El registro "
-"de errores del servidor podría darle más información."
+"Se ha producido un error durante la exportación de los artículos. El "
+"registro de errores del servidor podría darle más información."
 
 msgid "plugins.generic.pln.error.depositor.missingpackage"
 msgstr "No se puede encontrar el archivo empaquetado {$file}."
 
 msgid "plugins.generic.pln.error.http.swordstatement"
-msgstr "\n"
-"{$message}"
+msgstr ""
 "El servidor de PN ha devuelto el error HTTP {$error} cuando comprobaba el "
-"estado del depósito."
+"estado del depósito.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.deposit"
-msgstr "\n"
-"{$message}"
+msgstr ""
 "El servidor de PN ha devuelto el error HTTP {$error} cuando enviaba el "
-"depósito."
+"depósito.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.http.servicedocument"
-msgstr "\n"
-"{$message}"
+msgstr ""
 "El servidor de PN ha devuelto el error HTTP {$error} cuando intentaba "
-"obtener el documento de servicio."
+"obtener el documento de servicio.\n"
+"{$message}"
 
 msgid "plugins.generic.pln.error.network.swordstatement"
 msgstr ""
@@ -179,10 +181,9 @@ msgstr ""
 
 msgid "plugins.generic.pln.notifications.issn_setting"
 msgstr ""
-"Su revista  debe tener un ISSN antes de que pueda aceptar las condiciones "
-"del servicio. Puede introducir el ISSN en la página de ajustes de la "
-"revista. Una vez introducido, las condiciones del servicio se mostrarán "
-"debajo."
+"Su revista debe tener un ISSN antes de que pueda aceptar las condiciones del "
+"servicio. Puede introducir el ISSN en la página de ajustes de la revista. "
+"Una vez introducido, las condiciones del servicio se mostrarán debajo."
 
 msgid "plugins.generic.pln.notifications.zip_missing"
 msgstr "El soporte de ZipArchive debe estar activo para continuar."
@@ -334,9 +335,9 @@ msgstr "Acepto"
 
 msgid "plugins.generic.pln.settings.terms_of_use_help"
 msgstr ""
-"Como administrador/a de la revista acepto y confirmo, de buena fe, los "
+"Como administrador/a de la revista, acepto y confirmo, de buena fe, los "
 "siguientes términos y condiciones para participar en la red de preservación "
-"de Public Knowledge Project (PKP PN):"
+"de Public Knowledge Project (PKP-PN):"
 
 msgid "plugins.generic.pln.settings.terms_of_use"
 msgstr "Condiciones de uso"
@@ -367,3 +368,58 @@ msgstr ""
 
 msgid "plugins.generic.pln"
 msgstr "Módulo PKP PN"
+
+msgid "plugins.generic.pln.status.error.deposit-error"
+msgstr ""
+"Hubo un error al depositar. Asegúrese de que no supera el tamaño máximo "
+"permitido por la Red de Preservación (Preservation Network)"
+
+msgid "plugins.generic.pln.status.error.reserialize-error"
+msgstr "Falló el reempaquetado del depósito. Se volverá a intentar la operación"
+
+msgid "plugins.generic.pln.status.error.bag-error"
+msgstr ""
+"El depósito no ha pasado la validación de bolsa (bag). Puede intentar volver "
+"a enviar el depósito"
+
+msgid "plugins.generic.pln.status.error.status-error"
+msgstr ""
+"El depósito se está conservando, pero no ha sido posible comprobar su "
+"estado. Se reintentará la operación"
+
+msgid "plugins.generic.pln.status.error.hold"
+msgstr ""
+"El depósito ha sido retenido, la versión de su sistema es superior a la "
+"esperada"
+
+msgid "plugins.generic.pln.status.error.harvest-error"
+msgstr ""
+"No se ha podido descargar el depósito de su sistema. Se intentará la "
+"operación de nuevo, pero mientras tanto, puede comprobar si su sistema está "
+"detrás de un cortafuegos"
+
+msgid "plugins.generic.pln.status.error.virus-error"
+msgstr ""
+"El depósito no ha pasado la comprobación del antivirus. Debe inspeccionar "
+"sus archivos y volver a enviar"
+
+msgid "plugins.generic.pln.status.error.xml-error"
+msgstr ""
+"El depósito no ha pasado la validación de contenido. Puede intentar volver a "
+"enviar el depósito"
+
+msgid "plugins.generic.pln.status.error.payload-error"
+msgstr ""
+"El depósito no ha pasado la validación de la carga útil (payload). Puede "
+"intentar volver a enviar el depósito"
+
+msgid "plugins.generic.pln.depositor.pruningDeposits.error"
+msgstr "La eliminación de los depósitos siguientes ha fallado: {$depositIds}."
+
+msgid "plugins.generic.pln.onPluginEnabledNotification"
+msgstr ""
+"Acceda a los ajustes del módulo PKP PN para ver y aceptar las condiciones "
+"del servicio."
+
+msgid "plugins.generic.pln.notifications.pruningOrphanedDeposits"
+msgstr "Poda de depósitos huérfanos."
