--- a/locale/ar_IQ/locale.po
+++ b/locale/ar_IQ/locale.po
@@ -1,20 +1,22 @@
 # Salam Al-Khammasi <salam.alshemmari@uokufa.edu.iq>, 2023.
+# M. Ali <vorteem@gmail.com>, 2023.
+# "M. Ali" <vorteem@gmail.com>, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2023-02-09 20:48+0000\n"
-"Last-Translator: Salam Al-Khammasi <salam.alshemmari@uokufa.edu.iq>\n"
-"Language-Team: Arabic <http://translate.pkp.sfu.ca/projects/plugins/pln/"
-"ar_IQ/>\n"
-"Language: ar_IQ\n"
+"PO-Revision-Date: 2024-07-25 06:40+0000\n"
+"Last-Translator: \"M. Ali\" <vorteem@gmail.com>\n"
+"Language-Team: Arabic <http://translate.pkp.sfu.ca/projects/plugins/pln/ar/>"
+"\n"
+"Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
-"X-Generator: Weblate 4.13.1\n"
+"X-Generator: Weblate 4.18.2\n"
 
 msgid "plugins.generic.pln"
 msgstr "إضافة مشروع المعرفة العامة PN"
@@ -213,10 +215,14 @@ msgid "plugins.generic.pln.error.depositor.missingpackage"
 msgstr "تعذر العثور على ملف حزمة {$file}."
 
 msgid "plugins.generic.pln.error.depositor.export.articles.error"
-msgstr "حصل خطأ ما عند تصدير المؤلفات. قد يتضمن ملف توثيق الملقم المزيد من المعلومات."
+msgstr ""
+"حصل خطأ ما عند تصدير المؤلفات. قد يتضمن ملف توثيق أخطاء الملقم المزيد من "
+"المعلومات."
 
 msgid "plugins.generic.pln.error.depositor.export.issue.error"
-msgstr "حصل خطأ ما عند تصدير العدد. قد يتضمن ملف توثيق الملقم المزيد من المعلومات."
+msgstr ""
+"حصل خطأ ما عند تصدير العدد. قد يتضمن ملف توثيق أخطاء الملقم المزيد من "
+"المعلومات."
 
 msgid "plugins.generic.pln.error.handler.uuid.invalid"
 msgstr "الرمز التعريفي UUID غير صحيح، أو غير منسق كما ينبغي."
@@ -349,3 +355,47 @@ msgstr "رمز تعريف العدد"
 
 msgid "plugins.generic.pln.objectId"
 msgstr "رمز تعريف مُكون النوع"
+
+msgid "plugins.generic.pln.status.error.deposit-error"
+msgstr ""
+"الإيداع فشل، تأكد من أنه لا يتجاوز الحجم الإقصى الذي تدعمه شبكة جهة الحفظ"
+
+msgid "plugins.generic.pln.status.error.virus-error"
+msgstr ""
+"الإيداع لم يجتز عملية التحقق من الفيروسات، ينبغي عليك فحص ملفاته، ثم إعادة "
+"إرساله"
+
+msgid "plugins.generic.pln.status.error.xml-error"
+msgstr "الإيداع لم يجتز عملية التحقق من المحتوى، يمكنك محاولة إعادة إرساله"
+
+msgid "plugins.generic.pln.status.error.bag-error"
+msgstr "الإيداع لم يجتز عملية التحقق من الحقيبة، يمكنك محاولة إعادة إرساله"
+
+msgid "plugins.generic.pln.status.error.hold"
+msgstr "الإيداع تم التحفظ عليه، إصدار نظامك يفوق توقعاته"
+
+msgid "plugins.generic.pln.status.error.harvest-error"
+msgstr ""
+"فشلت عملية تنزيل الإيداع من نظامك. ستتم إعادة محاولة هذه العملية، يمكنك في "
+"هذه الأثناء التحقق فيما إذا كان نظامك يقبع خلف جدار حماية"
+
+msgid "plugins.generic.pln.status.error.reserialize-error"
+msgstr "فشلت عملية إعادة تعبئة الإيداع، وستتم إعادة محاولتها"
+
+msgid "plugins.generic.pln.status.error.payload-error"
+msgstr "الإيداع لم يجتز عملية التحقق من الحمولة، يمكنك محاولة إعادة إرساله"
+
+msgid "plugins.generic.pln.status.error.status-error"
+msgstr ""
+"الإيداع يجري حفظه، ولكن لم يكن ممكنًا التحقق من حالته، ستتم إعادة محاولة ذلك"
+
+msgid "plugins.generic.pln.onPluginEnabledNotification"
+msgstr ""
+"إذهب إلى إعدادات إضافة PN لمشروع المعرفة العامة لمعاينة شروط الخدمة "
+"والموافقة عليها."
+
+msgid "plugins.generic.pln.notifications.pruningOrphanedDeposits"
+msgstr "تقليم الإيداعات المُيتمة."
+
+msgid "plugins.generic.pln.depositor.pruningDeposits.error"
+msgstr "إزالة الإيداعات الآتية قد فشلت: {$depositIds}."
