--- a/locale/de_DE/locale.po
+++ b/locale/de_DE/locale.po
@@ -1,18 +1,20 @@
+# Pia Piontkowitz <pia.piontkowitz@rub.de>, 2023.
+# Renate Voget <renate.voget@hbz-nrw.de>, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-03-03T23:08:22+00:00\n"
-"PO-Revision-Date: 2021-06-15 07:03+0000\n"
-"Last-Translator: Sebastian Wolf <bibliothekswelt@htmlwolf.de>\n"
-"Language-Team: German <http://translate.pkp.sfu.ca/projects/plugins/pln/"
-"de_DE/>\n"
-"Language: de_DE\n"
+"PO-Revision-Date: 2024-08-15 04:33+0000\n"
+"Last-Translator: Renate Voget <renate.voget@hbz-nrw.de>\n"
+"Language-Team: German <http://translate.pkp.sfu.ca/projects/plugins/pln/de/>"
+"\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.9.1\n"
+"X-Generator: Weblate 4.18.2\n"
 
 msgid "plugins.generic.pln"
 msgstr "PKP-PN-Plug-In"
@@ -222,7 +224,7 @@ msgid "plugins.generic.pln.depositor.updatedcontent"
 msgstr "Verarbeite aktualisierte Inhalte."
 
 msgid "plugins.generic.pln.depositor.newcontent"
-msgstr " Verarbeite neue Inhalte."
+msgstr "Verarbeite neue Inhalte."
 
 msgid "plugins.generic.pln.depositor.packagingdeposits"
 msgstr "Verpacke Inhalte zur Ablieferung."
@@ -330,3 +332,59 @@ msgstr ""
 "Versuch der Statusaktualisierung für {$depositId} ({$objectType}: "
 "{$objectId}) (Lokaler Status: [{$statusLocal}], Verarbeitungsstatus: "
 "[{$statusProcessing}], Lockss Status: [{$statusLockss}])"
+
+msgid "plugins.generic.pln.status.error.harvest-error"
+msgstr ""
+"Der Download der Ablieferung von Ihrem System ist fehlgeschlagen. Der "
+"Vorgang wird erneut versucht. In der Zwischenzeit können Sie überprüfen, ob "
+"sich Ihr System hinter einer Firewall befindet"
+
+msgid "plugins.generic.pln.status.error.deposit-error"
+msgstr ""
+"Ablieferung fehlgeschlagen, stellen Sie sicher, dass die vom Preservation "
+"Network maximal erlaubte Größe nicht überschritten wurde"
+
+msgid "plugins.generic.pln.status.error.reserialize-error"
+msgstr ""
+"Umverpacking der Ablieferung fehlgeschlagen, der Vorgang wird erneut versucht"
+
+msgid "plugins.generic.pln.status.error.virus-error"
+msgstr ""
+"Die Ablieferung hat den Antivirencheck nicht bestanden, bitte überprüfen Sie "
+"die Dateien und senden sie erneut"
+
+msgid "plugins.generic.pln.status.error.xml-error"
+msgstr ""
+"Der Inhalt der Ablieferung konnte nicht validiert werden, bitte versuchen "
+"Sie es erneut"
+
+msgid "plugins.generic.pln.status.error.payload-error"
+msgstr ""
+"Die Nutzlastdaten der Ablieferung konnten nicht validiert werden, bitte "
+"versuchen Sie es erneut"
+
+msgid "plugins.generic.pln.status.error.status-error"
+msgstr ""
+"Die Ablieferung wird aufbewahrt, der Status konnte jedoch nicht überprüft "
+"werden. Der Vorgang wird wiederholt"
+
+msgid "plugins.generic.pln.status.error.hold"
+msgstr ""
+"Die Ablieferung wurde zurückgehalten, die Version Ihres Systems übertrifft "
+"die erwartete"
+
+msgid "plugins.generic.pln.status.error.bag-error"
+msgstr ""
+"Die Ablieferung hat die bag validation nicht bestanden, bitte versuchen Sie "
+"es erneut"
+
+msgid "plugins.generic.pln.notifications.pruningOrphanedDeposits"
+msgstr "Verwaiste Bestände entfernen."
+
+msgid "plugins.generic.pln.depositor.pruningDeposits.error"
+msgstr "Folgende Bestände konnten nicht entfernt werden: {$depositIds}."
+
+msgid "plugins.generic.pln.onPluginEnabledNotification"
+msgstr ""
+"Gehen Sie zu den Einstellungen des PKP PN Plugins, um zu den AGBs zu "
+"gelangen und diesen zuzustimmen."
