--- a/locale/sl_SI/locale.po
+++ b/locale/sl_SI/locale.po
@@ -1,17 +1,17 @@
-# Primož Svetek <primoz.svetek@gmail.com>, 2023.
+# Primož Svetek <primoz.svetek@gmail.com>, 2023, 2024.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2023-01-31 13:48+0000\n"
+"PO-Revision-Date: 2024-06-28 01:18+0000\n"
 "Last-Translator: Primož Svetek <primoz.svetek@gmail.com>\n"
 "Language-Team: Slovenian <http://translate.pkp.sfu.ca/projects/plugins/pln/"
-"sl_SI/>\n"
-"Language: sl_SI\n"
+"sl/>\n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
-"%100==4 ? 2 : 3;\n"
-"X-Generator: Weblate 4.13.1\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
+"n%100==4 ? 2 : 3;\n"
+"X-Generator: Weblate 4.18.2\n"
 
 msgid "plugins.generic.pln.settings.acron_required"
 msgstr ""
@@ -358,3 +358,49 @@ msgstr ""
 
 msgid "plugins.generic.pln"
 msgstr "PKP PN vtičnik"
+
+msgid "plugins.generic.pln.status.error.deposit-error"
+msgstr ""
+"Deponiranje je bilo neuspešno, preverite, da niste presegli največjo "
+"dovoljeno velikost, ki jo Preservation Network podpira"
+
+msgid "plugins.generic.pln.status.error.reserialize-error"
+msgstr "Ponovno pakiranje depozita ni uspelo, postopek bo ponovljen"
+
+msgid "plugins.generic.pln.status.error.xml-error"
+msgstr "Depozit ni prestal preverjanje vsebine, poskusite ga ponovno poslati"
+
+msgid "plugins.generic.pln.status.error.payload-error"
+msgstr "Depozit ni prestal preverjanje vsebine, poskusite ga ponovno poslati"
+
+msgid "plugins.generic.pln.status.error.bag-error"
+msgstr "Depozit ni prestal preverjanje ovojnice, poskusite ga ponovno poslati"
+
+msgid "plugins.generic.pln.status.error.hold"
+msgstr "Depozit je bil zadržan, verzija vašega sistema je višja od pričakovane"
+
+msgid "plugins.generic.pln.status.error.harvest-error"
+msgstr ""
+"Neuspel prenos podatkov iz vašega sistema. Operacija bo ponovila, medtem pa "
+"lahko preverite, če je vas sistem za požarnim zidom"
+
+msgid "plugins.generic.pln.status.error.virus-error"
+msgstr ""
+"Depozit ni prestal protivirusnega preverjanja, preverite datoteke in jih "
+"ponovno pošljite"
+
+msgid "plugins.generic.pln.status.error.status-error"
+msgstr ""
+"Depozit je bil uspešno ohranjen, a ni bilo mogoče preveriti statusa, "
+"operacija bo ponovljena"
+
+msgid "plugins.generic.pln.depositor.pruningDeposits.error"
+msgstr "Brisanje naslednjih depozitov ni bilo uspešno: {$depositIds}."
+
+msgid "plugins.generic.pln.onPluginEnabledNotification"
+msgstr ""
+"Preverite nastavitve PKP PN vtičnika, da pogledate in potrdite pogoje "
+"uporabe."
+
+msgid "plugins.generic.pln.notifications.pruningOrphanedDeposits"
+msgstr "Čiščenje zaostalih depozitov."
