pkp/pkp-lib#10840 Removed space from variable name

--- a/locale/ka_GE/locale.po
+++ b/locale/ka_GE/locale.po
@@ -302,7 +302,7 @@ msgstr ""
 "Lockss Status: [{$statusLockss}])"
 
 msgid "plugins.generic.pln.depositor.statusupdates.processing.processingState"
-msgstr "დამუშავების სტატუსი მიიღო {$depositId} -> {{$processingState})"
+msgstr "დამუშავების სტატუსი მიიღო {$depositId} -> ({$processingState})"
 
 msgid "plugins.generic.pln.depositor.packagingdeposits.processing"
 msgstr ""
